/*
 * Defines a message for communicating the run mode
 */

syntax = "proto3";

option optimize_for = LITE_RUNTIME;

enum Mode {
    IDLE = 0;
    AUTO = 1;
    TELEOP = 2;
    ESTOP = 3;
}

message RunMode {
    Mode mode = 1;
}
